--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1610,14 +1610,13 @@ img {
 }
 
 .mmr-display::before,
-.mmr-display.global::before{
+.mmr-display.global::before {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 4px;
-    background: var(--primary);
     background: linear-gradient(90deg, var(--primary) 0%, var(--accent) 100%);
 }
 
@@ -1629,7 +1628,7 @@ img {
 }
 
 .mmr-display.global .mmr-value {
-    color: var(--secondary);
+    color: var(--primary);
 }
 
 /* Stats Grid */
