--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -487,7 +487,7 @@ function showPlayerDetails(playerId) {
                     <!-- Global Stats Tab -->
                     <div class="tab-pane fade" id="global-stats" role="tabpanel" aria-labelledby="global-tab">
                         <!-- GLOBAL TAB CONTENT -->
-                        <div class="card bg-dark-medium mb-4 global-stats-enhanced">
+                        <div class="card bg-dark-medium mb-4">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-md-4">
