--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -492,7 +492,7 @@ function showPlayerDetails(playerId) {
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="mmr-display global">
-                                            <h4 class="mmr-label">Global MMR</h4>
+                                            <h4 class="mmr-label">MMR</h4>
                                             <div class="mmr-value">${player.global_mmr || 300}</div>
                                         </div>
                                     </div>
